
3.56  2012-11-09
  - Improved documentation.
  - Improved tests.

3.55  2012-11-08
  - Added gzip compression support to Mojo::UserAgent.
  - Added is_compressed method to Mojo::Content.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented around_dispatch hooks from working correctly in
    embedded applications.
  - Fixed small bug where "chunked" would not always be the default transfer
    encoding.

3.54  2012-11-01
  - Added next and previous methods to Mojo::DOM.
  - Improved documentation.
  - Improved tests.

3.53  2012-10-31
  - Replaced Mojolicious::Guides::CodingGuidelines with
    Mojolicious::Guides::Contributing.
  - Improved documentation.
  - Improved tests.

3.52  2012-10-26
  - Added boolean shortcut support to Mojo::JSON.
  - Added escape attribute to Mojo::Template. (jberger)
  - Added max_buffer_size attribute to Mojo::Content.
  - Added is_limit_exceeded method to Mojo::Content.
  - Improved documentation.
  - Improved tests.

3.51  2012-10-23
  - Improved documentation.
  - Improved tests.
  - Fixed multiple small context bugs.

3.50  2012-10-20
  - Improved option handling of all commands.

3.49  2012-10-19
  - Improved documentation.
  - Improved tests.
  - Fixed % escaping bug in Mojo::Parameters. (dmw397)

3.48  2012-10-16
  - Improved Mojo::Content performance slightly.
  - Improved documentation.
  - Fixed memory leak in Mojo::Headers.

3.47  2012-10-13
  - Added all method to Mojo::UserAgent::CookieJar.
  - Improved documentation.
  - Fixed WebSocket bug in Mojo::Content.

3.46  2012-10-11
  - Improved router and renderer to allow camel case controllers.
  - Improved documentation.

3.45  2012-10-10
  - Added multi_accept attribute to Mojo::IOLoop.
  - Added multi_accept attribute to Mojo::IOLoop::Server.
  - Added multi_accept setting to Hypnotoad.
  - Relaxed comment handling in Mojo::DOM::HTML a little. (jberger)
  - Improved accept performance of all built-in web servers significantly.