@@ -1,5 +1,7 @@
 
 3.56  2012-11-09
+  - Improved performance of contains method in Mojo::Asset::File
+    significantly.
   - Improved documentation.
   - Improved tests.
 
